--- a/cart.html
+++ b/cart.html
@@ -303,7 +303,7 @@
                                         <ul>
                                             <li>Swapon's World</li>
                                             <li><i class="fa fa-angle-right"></i></li>
-                                            <li>Shipping Fee <span>120 TK</span></li>
+                                            <li>Shipping Fee <span>120 ৳</span></li>
                                         </ul>
                                     </div>
                                     <div class="cart-item-wrap">
@@ -364,7 +364,7 @@
                                         <ul>
                                             <li>Swapon's World</li>
                                             <li><i class="fa fa-angle-right"></i></li>
-                                            <li>Shipping Fee <span>120 TK</span></li>
+                                            <li>Shipping Fee <span>120 ৳</span></li>
                                         </ul>
                                     </div>
                                     <div class="cart-item-wrap">
