--- a/category.html
+++ b/category.html
@@ -344,7 +344,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="product-details.html" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="product-details.html" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -356,7 +356,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -368,7 +368,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -380,7 +380,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -392,7 +392,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -404,7 +404,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -416,7 +416,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -428,7 +428,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -440,7 +440,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -452,7 +452,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -464,7 +464,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -476,7 +476,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -488,7 +488,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -500,7 +500,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -512,7 +512,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -524,7 +524,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
