--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -484,7 +484,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -496,7 +496,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -508,7 +508,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -520,7 +520,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -532,7 +532,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -544,7 +544,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -556,7 +556,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -568,7 +568,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -580,7 +580,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -592,7 +592,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -604,7 +604,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -748,7 +748,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -760,7 +760,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -772,7 +772,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -784,7 +784,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -796,7 +796,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -808,7 +808,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -820,7 +820,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -832,7 +832,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -844,7 +844,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -856,7 +856,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -868,7 +868,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -880,7 +880,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -910,7 +910,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -922,7 +922,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -934,7 +934,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -946,7 +946,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -958,7 +958,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -970,7 +970,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -982,7 +982,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -994,7 +994,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -1006,7 +1006,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -1018,7 +1018,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -1030,7 +1030,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
@@ -1042,7 +1042,7 @@
                         </a>
                         <div class="product-content pt-10">
                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                            <span class="product-price">Tk. 500</span>
+                            <span class="product-price">৳. 500</span>
                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                         </div>
                     </div>
