--- a/product-details.html
+++ b/product-details.html
@@ -454,7 +454,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -466,7 +466,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -478,7 +478,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -490,7 +490,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -502,7 +502,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -514,7 +514,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -526,7 +526,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -538,7 +538,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -550,7 +550,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -562,7 +562,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -574,7 +574,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
@@ -586,7 +586,7 @@
                                     </a>
                                     <div class="product-content pt-10">
                                         <a href="#0" class="product-ttile">Sports Backpack</a>
-                                        <span class="product-price">Tk. 500</span>
+                                        <span class="product-price">৳. 500</span>
                                         <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                     </div>
                                 </div>
