--- a/vendor.html
+++ b/vendor.html
@@ -361,7 +361,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="product-details.html" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="product-details.html" class="add-to-cart"><i
                                                     class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
@@ -374,7 +374,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -386,7 +386,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -398,7 +398,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -410,7 +410,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -422,7 +422,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -434,7 +434,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -446,7 +446,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -458,7 +458,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -470,7 +470,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -482,7 +482,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -494,7 +494,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -506,7 +506,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -518,7 +518,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -530,7 +530,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
@@ -542,7 +542,7 @@
                                         </a>
                                         <div class="product-content pt-10">
                                             <a href="#0" class="product-ttile">Sports Backpack</a>
-                                            <span class="product-price">Tk. 500</span>
+                                            <span class="product-price">৳. 500</span>
                                             <a href="#0" class="add-to-cart"><i class="fa fa-cart"></i> Add to Cart</a>
                                         </div>
                                     </div>
